corrected color contrast issues

--- a/Cross-power-institute/styles/registration.css
+++ b/Cross-power-institute/styles/registration.css
@@ -10,7 +10,12 @@ h1 {
     text-align: center;
     margin-bottom: 1rem;
 }
-
+h2{
+   color: rgb(15, 30, 54); 
+}
+p{
+    color: #ffffff;
+}
 label {
     display: block;
     margin-bottom: 5px;
@@ -51,10 +56,13 @@ ul {
 li {
     margin-bottom: 5px;
 }
-
+footer{
+    background-color: #333333;
+    color: #ffffff;
+}
 button {
     padding: 0.5rem 1rem;
-    background-color: #4CAF50; /* Green */
+    background-color: #0a4d0c; /* Green */
     border: none;
     color: white;
     text-align: center;
